Restore grid spacing, corner radius and fix hover effects for the admin panel

--- a/src/client/css/_editable-gallery-list.scss
+++ b/src/client/css/_editable-gallery-list.scss
@@ -31,13 +31,12 @@
       }
 
       button:hover {
-        font-size: 14px;
+        outline: solid 1px #999;
       }
     }
 
     li:hover {
       background-color: #2e2e2e;
-      color: #fefefe;
     }
   }
 }
