--- a/src/client/css/_image-list.scss
+++ b/src/client/css/_image-list.scss
@@ -1,7 +1,7 @@
 .image-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 0;
+    grid-gap: 5px;
     max-width: 1200px;
     margin: 20px auto;
     
@@ -29,6 +29,8 @@
             height: 100%;
             object-fit: cover;
             transition: transform 0.3s ease, opacity 0.3s ease;
+
+            border-radius: 5px;
         }
         
         &::after {
